--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -85,26 +85,68 @@
 
 				<div class="col-lg-10">
 					<div class="row">
-						<div class="results-info">
+						<div class="results-info mb-3">
 							<div class="row">
-								<div class="col-6"><h1>12 results</h1></div>
-								<div class="col-6">
-									<form>
+								<div class="col-lg-6"><h1>12 results</h1></div>
+								<div class="col-lg-6">
+									<form class="sort-menu">
 										<label for="sort">Sort By:</label>
 										<select name="sort" id="sortby">
-											<option value="Popularity">Volvo</option>
-											<option value="Alphabetical">Saab</option>
+											<option value="Popularity">Popularity</option>
+											<option value="Alphabetical">Alphabetical</option>
 										</select>
 									</form>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-4">BOX1</div>
-						<div class="col-lg-4">BOX2</div>
-						<div class="col-lg-4">BOX3</div>
-						<div class="col-lg-4">BOX1</div>
-						<div class="col-lg-4">BOX2</div>
-						<div class="col-lg-4">BOX3</div>
+                        <div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/spiderman_comic.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">Amazing Spiderman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
+						<div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/dc_superman.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">DC Superman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/spiderman_comic.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">Amazing Spiderman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/spiderman_comic.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">Amazing Spiderman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/spiderman_comic.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">Amazing Spiderman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
+                        <div class="col-lg-3">
+                            <div class="comic-info">
+                                <img src="../images/spiderman_comic.png" alt="" srcset="">
+                                <h1 class="ps-2 mt-3">Amazing Spiderman</h1>
+                                <h2 class="ps-2">Series 4, Vol 1</h2>
+                                <h1 class="ps-2 mb-3 pb-3">£13.99</h1>
+                            </div>
+                        </div>
 					</div>
 				</div>
 			</div>
